--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,9 +19,9 @@
     @apply bg-gray-50 dark:bg-black;
     content: "";
     position: absolute;
-    top: 0;
+    top: -2px;
     left:0;
-    height:100%;
+    height:110%;
     width:100%;
     border-left: 2px solid blue;
     animation: animate 4s steps(12) infinite;
